# BoneSource

./: BoneSource.sln  BoneSource.vcxproj  BoneSource.vcxproj.filters  CMakeLists.txt  README.md  glad.c
BoneSource/x64/Debug/: BoneSource.exe.recipe
BoneSource/x64/Debug/BoneSource.tlog/: BoneSource.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: Main.cpp
src/BoneSource/Core/: Core.cpp  Core.h
src/BoneSource/Debug/: Debug.cpp  Debug.h
src/BoneSource/File/: File.cpp  File.h
src/BoneSource/Time/: CMakeLists.txt  Time.cpp  Time.h
src/BoneSource/Window/: Window.cpp  Window.h
